patch: first_failing_todos_test

--- a/src/.spruce/settings.json
+++ b/src/.spruce/settings.json
@@ -16,8 +16,6 @@
     }
   ],
   "events": {
-    "listenerCacheKeys": {
-      "httpsdevelopermercuryspruceai": ""
-    }
+    "lastSync": {}
   }
 }
