patch: styling of todo row!

--- a/src/.spruce/settings.json
+++ b/src/.spruce/settings.json
@@ -16,6 +16,9 @@
     }
   ],
   "events": {
-    "lastSync": {}
+    "lastSync": {},
+    "listenerCacheKeys": {
+      "httpsdevelopermercuryspruceai": ""
+    }
   }
 }
