--- a/package.json
+++ b/package.json
@@ -38,32 +38,32 @@
     "watch.tsc": "tsc -w"
   },
   "dependencies": {
-    "@sprucelabs/error": "^5.0.522",
-    "@sprucelabs/heartwood-view-controllers": "^91.4.2",
-    "@sprucelabs/mercury-client": "^31.0.246",
-    "@sprucelabs/mercury-core-events": "^12.2.65",
-    "@sprucelabs/mercury-types": "^35.0.191",
-    "@sprucelabs/schema": "^28.5.33",
-    "@sprucelabs/spruce-core-schemas": "^34.2.146",
-    "@sprucelabs/spruce-event-plugin": "^50.0.17",
-    "@sprucelabs/spruce-event-utils": "^27.0.225",
-    "@sprucelabs/spruce-skill-booter": "^50.0.17",
-    "@sprucelabs/spruce-skill-utils": "^26.4.127",
-    "@sprucelabs/spruce-view-plugin": "^35.0.23",
+    "@sprucelabs/error": "^5.0.523",
+    "@sprucelabs/heartwood-view-controllers": "^91.5.0",
+    "@sprucelabs/mercury-client": "^31.0.250",
+    "@sprucelabs/mercury-core-events": "^12.2.69",
+    "@sprucelabs/mercury-types": "^35.0.195",
+    "@sprucelabs/schema": "^28.5.35",
+    "@sprucelabs/spruce-core-schemas": "^34.2.149",
+    "@sprucelabs/spruce-event-plugin": "^50.0.18",
+    "@sprucelabs/spruce-event-utils": "^27.0.229",
+    "@sprucelabs/spruce-skill-booter": "^50.0.18",
+    "@sprucelabs/spruce-skill-utils": "^26.4.131",
+    "@sprucelabs/spruce-view-plugin": "^35.0.30",
     "dotenv": "^16.0.3",
     "globby": "^11.0.4"
   },
   "devDependencies": {
-    "@sprucelabs/jest-json-reporter": "^6.0.491",
-    "@sprucelabs/jest-sheets-reporter": "^1.3.123",
-    "@sprucelabs/resolve-path-aliases": "^1.1.110",
-    "@sprucelabs/spruce-test-fixtures": "^50.0.17",
-    "@sprucelabs/test": "^7.7.370",
-    "@sprucelabs/test-utils": "^3.2.22",
+    "@sprucelabs/jest-json-reporter": "^6.0.492",
+    "@sprucelabs/jest-sheets-reporter": "^1.3.124",
+    "@sprucelabs/resolve-path-aliases": "^1.1.111",
+    "@sprucelabs/spruce-test-fixtures": "^50.0.18",
+    "@sprucelabs/test": "^7.7.371",
+    "@sprucelabs/test-utils": "^3.2.24",
     "@types/node": "^18.8.3",
     "chokidar-cli": "^3.0.0",
     "concurrently": "^7.4.0",
-    "eslint": "^8.24.0",
+    "eslint": "^8.25.0",
     "eslint-config-spruce": "^10.11.4",
     "jest": "^29.1.2",
     "jest-circus": "^29.1.2",
@@ -103,8 +103,11 @@
           "worksheetId": 0,
           "testMap": {
             "newRowRendersAddButton": "B2",
-            "pressingEnterDoesNotAddRowIfNoTodo": "B3",
-            "pressingAddWithoutTodoDoesNotAdd": "B4"
+            "hittingEnterInNewInputAddsRow": "B3",
+            "pressingAddWithoutTodoDoesNotAdd": "B4",
+            "todoRowHasDeleteButton": "B7",
+            "addedTodoRowHasCheckbox": "B8",
+            "pressingEnterDoesNotAddRowIfNoTodo": "B16"
           }
         }
       ]
