--- a/src/.spruce/settings.json
+++ b/src/.spruce/settings.json
@@ -16,7 +16,12 @@
     }
   ],
   "events": {
-    "lastSync": {},
+    "lastSync": {
+      "contractDestinationDir": "#spruce/events",
+      "schemaTypesLookupDir": "#spruce/schemas",
+      "skillEventContractTypesFile": "@sprucelabs/mercury-types/build/types/mercury.types",
+      "eventBuilderFile": "@sprucelabs/mercury-types"
+    },
     "listenerCacheKeys": {
       "httpsdevelopermercuryspruceai": ""
     }
