patch: first_listener

--- a/src/.spruce/settings.json
+++ b/src/.spruce/settings.json
@@ -16,9 +16,14 @@
     }
   ],
   "events": {
-    "lastSync": {},
+    "lastSync": {
+      "contractDestinationDir": "#spruce/events",
+      "schemaTypesLookupDir": "#spruce/schemas",
+      "skillEventContractTypesFile": "@sprucelabs/mercury-types/build/types/mercury.types",
+      "eventBuilderFile": "@sprucelabs/mercury-types"
+    },
     "listenerCacheKeys": {
-      "httpsdevelopermercuryspruceai": ""
+      "httpsdevelopermercuryspruceai": "addtodosv2022_10_08"
     }
   }
 }
