--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "watch.tsc": "tsc -w"
   },
   "dependencies": {
+    "@sprucelabs/data-stores": "^18.1.98",
     "@sprucelabs/error": "^5.0.523",
     "@sprucelabs/heartwood-view-controllers": "^91.5.0",
     "@sprucelabs/mercury-client": "^31.0.250",
@@ -49,6 +50,7 @@
     "@sprucelabs/spruce-event-utils": "^27.0.229",
     "@sprucelabs/spruce-skill-booter": "^50.0.18",
     "@sprucelabs/spruce-skill-utils": "^26.4.131",
+    "@sprucelabs/spruce-store-plugin": "^50.0.18",
     "@sprucelabs/spruce-view-plugin": "^35.0.31",
     "dotenv": "^16.0.3",
     "globby": "^11.0.4"
