patch: finished_add_todo_listener

--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
             "todoRowHasDeleteButton": "B7",
             "addedTodoRowHasCheckbox": "B8",
             "pressingEnterDoesNotAddRowIfNoTodo": "B16",
+            "addListenerReturnsSavedRecord": "E2",
             "addingTodoEmitsAddEvent": "E3"
           }
         }
