--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "todos",
   "description": "Getting things done",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "skill": {
     "namespace": "todos"
   },
@@ -13,11 +13,10 @@
   "scripts": {
     "boot": "node build/index",
     "boot.local": "node -r ts-node/register -r tsconfig-paths/register ./src/index",
-    "health": "yarn boot --health",
-    "health.local": "yarn boot.local --health",
     "build.ci": "yarn build.tsc && yarn build.resolve-paths && yarn lint",
-    "build.dev": "yarn build.tsc --sourceMap ; yarn resolve-paths.lint",
     "build.copy-files": "mkdir -p build && rsync -avzq --exclude='*.ts' ./src/ ./build/",
+    "build.dev": "yarn build.tsc --sourceMap ; yarn resolve-paths.lint",
+    "build.dist": "yarn build.tsc && yarn build.resolve-paths",
     "build.resolve-paths": "resolve-path-aliases --target build --patterns '**/*.js,**/*.d.ts'",
     "build.tsc": "yarn build.copy-files && tsc",
     "clean": "yarn clean.build",
@@ -25,13 +24,17 @@
     "clean.build": "rm -rf build/",
     "clean.dependencies": "rm -rf node_modules/ package-lock.json yarn.lock",
     "fix.lint": "eslint --fix --cache '**/*.ts'",
+    "health": "yarn boot --health",
+    "health.local": "yarn boot.local --health",
+    "heroku-postbuild": "yarn build.dev",
     "lint": "eslint --cache '**/*.ts'",
     "lint.tsc": "tsc -p . --noEmit",
     "post.watch.build": "yarn build.copy-files && yarn build.resolve-paths",
     "rebuild": "yarn clean.all && yarn && yarn build.dev",
-    "update.dependencies": "yarn clean.dependencies && yarn",
+    "release": "semantic-release",
     "resolve-paths.lint": "yarn build.resolve-paths ; yarn lint",
     "test": "jest",
+    "update.dependencies": "yarn clean.dependencies && yarn",
     "watch.build.dev": "tsc-watch --sourceMap --onCompilationComplete 'yarn post.watch.build'",
     "watch.lint": "concurrently 'yarn lint' \"chokidar 'src/**/*' -c 'yarn lint.tsc'\"",
     "watch.rebuild": "yarn clean.all && yarn && yarn watch.build.dev",
@@ -59,8 +62,8 @@
     "@sprucelabs/jest-json-reporter": "^6.0.492",
     "@sprucelabs/jest-sheets-reporter": "^1.3.124",
     "@sprucelabs/resolve-path-aliases": "^1.1.111",
+    "@sprucelabs/semantic-release": "^4.0.8",
     "@sprucelabs/spruce-test-fixtures": "^50.0.18",
-    "@sprucelabs/test": "^7.7.371",
     "@sprucelabs/test-utils": "^3.2.24",
     "@types/node": "^18.8.3",
     "chokidar-cli": "^3.0.0",
