patch: refactor listener

--- a/src/.spruce/settings.json
+++ b/src/.spruce/settings.json
@@ -17,6 +17,9 @@
     }
   ],
   "events": {
-    "lastSync": {}
+    "lastSync": {},
+    "listenerCacheKeys": {
+      "httpsdevelopermercuryspruceai": "addtodosv2022_10_08"
+    }
   }
 }
