patch: skill context

--- a/src/.spruce/settings.json
+++ b/src/.spruce/settings.json
@@ -19,7 +19,7 @@
   "events": {
     "lastSync": {},
     "listenerCacheKeys": {
-      "httpsdevelopermercuryspruceai": "addtodosv2022_10_08"
+      "httpsdevelopermercuryspruceai": "addtodosv2022_10_08didbootskillv2022_10_09"
     }
   }
 }
