--- a/src/.spruce/settings.json
+++ b/src/.spruce/settings.json
@@ -18,7 +18,12 @@
     }
   ],
   "events": {
-    "lastSync": {},
+    "lastSync": {
+      "contractDestinationDir": "#spruce/events",
+      "schemaTypesLookupDir": "#spruce/schemas",
+      "skillEventContractTypesFile": "@sprucelabs/mercury-types/build/types/mercury.types",
+      "eventBuilderFile": "@sprucelabs/mercury-types"
+    },
     "listenerCacheKeys": {
       "httpsdevelopermercuryspruceai": "addtodosv2022_10_08didbootskillv2022_10_09willbootskillv2022_10_09"
     }
