patch: todos loading

--- a/src/.spruce/settings.json
+++ b/src/.spruce/settings.json
@@ -18,6 +18,9 @@
     }
   ],
   "events": {
-    "lastSync": {}
+    "lastSync": {},
+    "listenerCacheKeys": {
+      "httpsdevelopermercuryspruceai": "addtodosv2022_10_08didbootskillv2022_10_09listtodosv2022_10_08willbootskillv2022_10_09"
+    }
   }
 }
