--- a/src/.spruce/settings.json
+++ b/src/.spruce/settings.json
@@ -19,6 +19,9 @@
     }
   ],
   "events": {
-    "lastSync": {}
+    "lastSync": {},
+    "listenerCacheKeys": {
+      "http1270018081": "addtodosv2022_10_08didbootskillv2022_10_09listtodosv2022_10_08willbootskillv2022_10_09"
+    }
   }
 }
