chore: spruce upgrade

--- a/package.json
+++ b/package.json
@@ -41,44 +41,44 @@
     "watch.tsc": "tsc -w"
   },
   "dependencies": {
-    "@sprucelabs/data-stores": "^25.0.30",
-    "@sprucelabs/error": "^5.1.22",
+    "@sprucelabs/data-stores": "^25.0.38",
+    "@sprucelabs/error": "^5.1.29",
     "@sprucelabs/globby": "^1.0.3",
-    "@sprucelabs/heartwood-view-controllers": "^107.2.6",
-    "@sprucelabs/mercury-client": "^41.0.52",
-    "@sprucelabs/mercury-core-events": "^22.0.48",
-    "@sprucelabs/mercury-types": "^46.0.36",
-    "@sprucelabs/schema": "^29.0.32",
-    "@sprucelabs/spruce-core-schemas": "^39.0.42",
-    "@sprucelabs/spruce-event-plugin": "^60.0.78",
-    "@sprucelabs/spruce-event-utils": "^38.0.43",
-    "@sprucelabs/spruce-permission-plugin": "^30.0.93",
-    "@sprucelabs/spruce-skill-booter": "^60.0.78",
-    "@sprucelabs/spruce-skill-utils": "^30.0.4",
-    "@sprucelabs/spruce-store-plugin": "^60.0.78",
-    "@sprucelabs/spruce-view-plugin": "^46.0.81",
+    "@sprucelabs/heartwood-view-controllers": "^107.2.55",
+    "@sprucelabs/mercury-client": "^41.0.78",
+    "@sprucelabs/mercury-core-events": "^22.0.75",
+    "@sprucelabs/mercury-types": "^46.0.63",
+    "@sprucelabs/schema": "^29.0.51",
+    "@sprucelabs/spruce-core-schemas": "^39.0.70",
+    "@sprucelabs/spruce-event-plugin": "^60.0.107",
+    "@sprucelabs/spruce-event-utils": "^38.0.75",
+    "@sprucelabs/spruce-permission-plugin": "^30.0.150",
+    "@sprucelabs/spruce-skill-booter": "^60.0.107",
+    "@sprucelabs/spruce-skill-utils": "^30.0.27",
+    "@sprucelabs/spruce-store-plugin": "^60.0.107",
+    "@sprucelabs/spruce-view-plugin": "^46.0.126",
     "dotenv": "^16.3.1"
   },
   "devDependencies": {
-    "@sprucelabs/jest-json-reporter": "^7.0.79",
+    "@sprucelabs/jest-json-reporter": "^7.0.93",
     "@sprucelabs/jest-sheets-reporter": "^3.0.26",
-    "@sprucelabs/resolve-path-aliases": "^1.1.237",
+    "@sprucelabs/resolve-path-aliases": "^1.1.245",
     "@sprucelabs/semantic-release": "^4.0.8",
-    "@sprucelabs/spruce-test-fixtures": "^60.0.78",
-    "@sprucelabs/test": "^8.0.8",
-    "@sprucelabs/test-utils": "^4.0.24",
-    "@types/node": "^20.5.1",
+    "@sprucelabs/spruce-test-fixtures": "^60.0.107",
+    "@sprucelabs/test": "^8.0.15",
+    "@sprucelabs/test-utils": "^4.0.40",
+    "@types/node": "^20.6.1",
     "chokidar-cli": "^3.0.0",
-    "concurrently": "^8.2.0",
-    "eslint": "^8.47.0",
-    "eslint-config-spruce": "^10.12.0",
-    "jest": "^29.6.3",
-    "jest-circus": "^29.6.3",
-    "prettier": "2.8.8",
+    "concurrently": "^8.2.1",
+    "eslint": "^8.49.0",
+    "eslint-config-spruce": "^10.13.6",
+    "jest": "^29.7.0",
+    "jest-circus": "^29.7.0",
+    "prettier": "^3.0.3",
     "ts-node": "^10.9.1",
     "tsc-watch": "^6.0.4",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.1.6"
+    "typescript": "^5.2.2"
   },
   "engines": {
     "yarn": "1.x"
